--- a/Compatibility/RedMattis.BetterPrerequisites/1.5/Languages/English/Keyed/MSS_GG_BS.xml
+++ b/Compatibility/RedMattis.BetterPrerequisites/1.5/Languages/English/Keyed/MSS_GG_BS.xml
@@ -11,9 +11,9 @@
     <MSS_GG_Settings_ChanceToMerge>Chance for shambler to merge: {0}%</MSS_GG_Settings_ChanceToMerge>
     <MSS_GG_Settings_ShamblerMergeHediffSeverityToTransform>Shambler merge hediff severity to trigger transformation [{0}]</MSS_GG_Settings_ShamblerMergeHediffSeverityToTransform>
 
-    <MSS_GG_Shambler_Merge>{0} merged with {1} to form a more powerful shade!</MSS_GG_Shambler_Merge>
-    <MSS_GG_Shambler_Merging>{0} is merging with {1} to form a more powerful shade!</MSS_GG_Shambler_Merging>
-    <MSS_GG_Shambler_Merge_Gorebeast>{0} merged with {1} to form a Gorebeast Shade!</MSS_GG_Shambler_Merge_Gorebeast>
+    <MSS_GG_Shambler_Merge>{0} merged with {1} to form a more powerful shamblers!</MSS_GG_Shambler_Merge>
+    <MSS_GG_Shambler_Merging>{0} is merging with {1} to form a more powerful shamblers!</MSS_GG_Shambler_Merging>
+    <MSS_GG_Shambler_Merge_Gorebeast>{0} merged with {1} to form a Gorebeast shamblers!</MSS_GG_Shambler_Merge_Gorebeast>
 
     <MSS_GG_MergedShambler_Desc>This shambler has merged with {0} other shamblers.</MSS_GG_MergedShambler_Desc>
 </LanguageData>
