--- a/Common/Languages/English/Keyed/Grey_Goo_Misc_UI.xml
+++ b/Common/Languages/English/Keyed/Grey_Goo_Misc_UI.xml
@@ -36,4 +36,6 @@
     <MSS_GG_MortarFiring>Grey goo mortar firing!</MSS_GG_MortarFiring>
     <MSS_GG_MortarNotOnGoo>Grey Goo Mortar is not on a goo tile, so cannot fire</MSS_GG_MortarNotOnGoo>
     <MSS_GG_MortarNotOnMap>Grey Goo Mortar is not on a map</MSS_GG_MortarNotOnMap>
+
+    <MSS_GG_CompGooShieldEnergy>Shield energy: {0}/{1}</MSS_GG_CompGooShieldEnergy>
 </LanguageData>
