Settings for goo mortar spawning

--- a/Common/Languages/English/Keyed/Grey_Goo_Misc_UI.xml
+++ b/Common/Languages/English/Keyed/Grey_Goo_Misc_UI.xml
@@ -15,6 +15,7 @@
     <MSS_GG_Setting_MapGooReevaluateFrequency>Number of ticks to spread the map goo reevaluation over {0}</MSS_GG_Setting_MapGooReevaluateFrequency>
     <MSS_GG_Setting_MapGooUpdateFrequency>Ticks to spread the goo update over {0}</MSS_GG_Setting_MapGooUpdateFrequency>
     <MSS_GG_Settings_MaxShamblersOnMap>Cutoff for new shamblers wandering onto map {0}</MSS_GG_Settings_MaxShamblersOnMap>
+    <MSS_GG_Settings_GooMortarSpawnTickRange>Tick range for Grey Goo Mortar Spawns {0}</MSS_GG_Settings_GooMortarSpawnTickRange>
     <MSS_GG_InfectOnGooTouch>Infect pawns on touching goo</MSS_GG_InfectOnGooTouch>
 
     <MSS_GG_GooControllerSpawned>A new grey goo controller has formed!</MSS_GG_GooControllerSpawned>
