--- a/Compatibility/RedMattis.BetterPrerequisites/1.5/Languages/English/Keyed/MSS_GG_BS.xml
+++ b/Compatibility/RedMattis.BetterPrerequisites/1.5/Languages/English/Keyed/MSS_GG_BS.xml
@@ -15,6 +15,7 @@
     <MSS_GG_Shambler_Merging>{0} is merging with {1} to form a more powerful shamblers!</MSS_GG_Shambler_Merging>
     <MSS_GG_Shambler_Merge_Gorebeast>{0} merged with {1} to form a Gorebeast shamblers!</MSS_GG_Shambler_Merge_Gorebeast>
 
+    <MSS_GG_MergedShambler_Label>Merged Shambler [{0} merges]</MSS_GG_MergedShambler_Label>
     <MSS_GG_MergedShambler_Desc>This shambler has merged with {0} other shamblers.</MSS_GG_MergedShambler_Desc>
 
     <GG_ControllerDestroyTitle>Grey Goo Controller Destroyed!</GG_ControllerDestroyTitle>
